--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,19 @@ jobs:
               printf "\n\nBuild triggered\n\n"
               printf "Follow the progress of the build on \nhttps://circleci.com/gh/gravityflow/gravityflowincomingwebhook/tree/master"
             fi
+      - run:
+          name: Trigger the Build Job for the Parent Child Forms Extension
+          command: |
+            if [[ ${CIRCLE_BRANCH} == "master" ]]; then
+              printf "Triggering the Build Job for the Parent Child Forms Extension\n\n"
+
+              BUILD_INFO=$(curl -X POST -H -d \
+                  "{}" \
+                  "https://circleci.com/api/v1/project/gravityflow/gravityflowparentchild/tree/master?circle-token=$CIRCLE_TOKEN")
+
+              printf "\n\nBuild triggered\n\n"
+              printf "Follow the progress of the build on \nhttps://circleci.com/gh/gravityflow/gravityflowparentchild/tree/master"
+            fi
 workflows:
   version: 2
   core_plus_extensions:
